	code, except adding new points to the ordination (which will need
	a separate function). The missing values in dissimilarities are
	also handled in the R interface. The function will eventually
	replace isoMDS() of the MASS package as the main NMDS engine in
	metaMDS().

	* metaMDS: uses monoMDS() as its default engine (and gained
	argument 'engine' to select either monoMDS() or isoMDS()). Not all
	functions work with the new engine, yet (goodness fails at least).

	* stressplot: is generic with a specific method for "monoMDS"
	objects, and the old function as the default method.

	* metaMDSrotate: gained argument 'na.rm' (defaults FALSE) to
	remove missing data from the continuous vector.
	
Version 1.18-27 (closed April 1, 2011)

	* orderingKM: Kurt Hornik found a problem when inspecting the
	Fortran subroutines with gcc 4.6 tools when checking vegan release
	1.17-9. 
	
Version 1.18-26 (closed March 31, 2011)

	* version closed with the release of vegan 1.17-9.

	* oecosimu: added argument 'tiesplit' (defaults FALSE). If TRUE,
	simulated values tied with the observed statistic are split so
	that half of them are regarded as satisfying the condition, and
	removed from those cases which are greater or less (as given by
	'alternative'). This is usually *not* done, but implementing
	Raup-Crick dissimilarity in oecosimu() following
	http://www.esajournals.org/doi/pdf/10.1890/ES10-00117.1 (Chase et
	al., Ecosphere 2011) uses this option. However, cross-checking
	the "r0" null model against the vegdist(..., "raup") indicates
	that the options should be set FALSE (and this would mean that the
	change is reverted).

	* anova.ccabyaxis: I (JO) noticed in an ORDNEWS message that
	anova(..., by = "axis") ignores the original Conditions in partial
	models and so gives wrong results in partial models. The fix finds
	the conditioning matrix as qr.X(object$pCCA$QR), and uses this as
	a Condition in updated models. Added a regression test that checks